mobile safari chit text alignment issue seems to be fixed

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -133,16 +133,17 @@ body {
 
 .chit {
     font-family: Garamond, serif;
-    margin: 0 5px;
 
     width: 38px;
     height: 38px;
     border-radius: 19px;
     border: 0px;
 
+    padding: 0px;
     text-align: center;
+    margin: 0px auto;
+
     background-color: #ffe5b4;
-    overflow: hidden;
 }
 
 .chit.likely {
